# lemmy

./: .drone.yml  Cargo.toml
ansible/: VERSION  lemmy.yml  lemmy_dev.yml
crates/api/: Cargo.toml
crates/api_common/: Cargo.toml
crates/api_crud/: Cargo.toml
crates/api_crud/src/post/: create.rs
crates/apub/: Cargo.toml
crates/apub_lib/: Cargo.toml
crates/apub_lib_derive/: Cargo.toml
crates/db_queries/: Cargo.toml
crates/db_schema/: Cargo.toml
crates/db_views/: Cargo.toml
crates/db_views_actor/: Cargo.toml
crates/db_views_moderator/: Cargo.toml
crates/routes/: Cargo.toml
crates/routes/src/: images.rs
crates/utils/: Cargo.toml
crates/utils/src/: utils.rs
crates/websocket/: Cargo.toml
docker/dev/: docker-compose.yml  test_deploy.sh
docker/federation/: docker-compose.yml  start-local-instances.bash
docker/prod/: Dockerfile  deploy-federation-test.sh  deploy.sh  docker-compose.yml
docker/travis/: docker_push.sh
lemmy_api/src/: version.rs
lemmy_utils/src/: utils.rs
scripts/: release.sh
