[package]
name = "lemmy_api"
version = ""
edition = "2018"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"

[lib]
name = "lemmy_api"
path = "src/lib.rs"
doctest = false

[dependencies]
lemmy_apub = { version = "=", path = "../apub" }
lemmy_utils = { version = "=", path = "../utils" }
lemmy_db_queries = { version = "=", path = "../db_queries" }
lemmy_db_schema = { version = "=", path = "../db_schema" }
lemmy_db_views = { version = "=", path = "../db_views" }
lemmy_db_views_moderator = { version = "=", path = "../db_views_moderator" }
lemmy_db_views_actor = { version = "=", path = "../db_views_actor" }
lemmy_api_common = { version = "=", path = "../api_common" }
lemmy_websocket = { version = "=", path = "../websocket" }
diesel = "1.4.7"
bcrypt = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = { version = "1.0.66", features = ["preserve_order"] }
serde = { version = "1.0.129", features = ["derive"] }
actix = "0.12.0"
actix-web = { version = "4.0.0-beta.8", default-features = false }
actix-rt = { version = "2.2.0", default-features = false }
awc = { version = "3.0.0-beta.7", default-features = false }
log = "0.4.14"
rand = "0.8.4"
strum = "0.21.0"
strum_macros = "0.21.1"
lazy_static = "1.4.0"
url = { version = "2.2.2", features = ["serde"] }
openssl = "0.10.36"
http = "0.2.4"
http-signature-normalization-actix = { version = "0.5.0-beta.7", default-features = false, features = ["sha-2"] }
base64 = "0.13.0"
tokio = "1.10.1"
futures = "0.3.16"
itertools = "0.10.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
sha2 = "0.9.5"
async-trait = "0.1.51"
captcha = "0.0.8"
anyhow = "1.0.43"
thiserror = "1.0.26"
background-jobs = "0.9.0"
reqwest = { version = "0.11.4", features = ["json"] }
