[package]
name = "lemmy_websocket"
version = ""
edition = "2018"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"

[lib]
name = "lemmy_websocket"
path = "src/lib.rs"
doctest = false

[dependencies]
lemmy_utils = { version = "=", path = "../utils" }
lemmy_api_common = { version = "=", path = "../api_common" }
lemmy_db_queries = { version = "=", path = "../db_queries" }
lemmy_db_schema = { version = "=", path = "../db_schema" }
lemmy_db_views = { version = "=", path = "../db_views" }
lemmy_db_views_actor = { version = "=", path = "../db_views_actor" }
reqwest = { version = "0.11.4", features = ["json"] }
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = { version = "1.0.66", features = ["preserve_order"] }
actix = "0.12.0"
anyhow = "1.0.43"
diesel = "1.4.7"
background-jobs = "0.9.0"
tokio = "1.10.1"
strum = "0.21.0"
strum_macros = "0.21.1"
chrono = { version = "0.4.19", features = ["serde"] }
actix-web = { version = "4.0.0-beta.8", default-features = false, features = ["rustls"] }
actix-web-actors = { version = "4.0.0-beta.6", default-features = false }
